# vue-cpp-demo

./: .gitignore  README.md
backend/: CMakeLists.txt  README.md  build.bat  compile.bat  download_deps.bat  main.cpp
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: base.css  main.css
